--- a/css/styles.css
+++ b/css/styles.css
@@ -8,12 +8,15 @@ footer p {
 }
 
 body {
+    
     background-image: url("https://storage.needpix.com/rsynced_images/jolly-1176091_1280.jpg");
+    background-color: rgba(255,255,255,0.3);
+    background-blend-mode: lighten;
 }
 
 nav {
     width: inherit;
-    height: 50px;
+    height: 60px;
     border-bottom:4px solid #ffffff ;
     opacity: 0.8;
     margin: 0mm;
@@ -44,7 +47,7 @@ img {
 
 li {
     display: inline-block;
-    margin: 0px 35px;
+    margin: 0px 10px;
     font-size: x-large;
     font-weight: bold;
     width: 165px;
