add flowers pictires with for loop

--- a/css/femaleStyle.css
+++ b/css/femaleStyle.css
@@ -4,11 +4,13 @@ a{
     font-style: normal;
     font-weight: bold;
 }
+
 #loginName{
     color: rgb(255, 0, 200);
 
 
 }
+
 footer p {
     text-align: center;
 }
@@ -30,6 +32,13 @@ nav {
     
 }
 
+#imagesArticle {
+    height: 220px;
+    width: inherit;
+    margin: 30px;
+    padding: 10px;
+}
+
 article {
     height: 500px;
     width: inherit;
@@ -42,7 +51,7 @@ p {
     color: rgb(255, 255, 255);
 }
 
-img {
+.articleImage {
     width: 600px;
     height: 480px;
     border-radius: 20px;
